# oj-eval-openhands-081-20260424231236

./: .gitignore  CMakeLists.txt  README.md  solution.cpp  test_input.txt
